force-app/main/default/objects/Freight__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <type>Lookup</type>
</CustomField>