force-app/main/default/objects/Freight__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <type>Lookup</type>
</CustomField>