force-app/main/default/objects/Freight__c/fields/Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Product_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Hierarchy</label>
    <referenceTo>Product_Hierarchy__c</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <type>Lookup</type>
</CustomField>