force-app/main/default/objects/Freight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distribution_Center__c</columns>
    <columns>Status__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>